--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "basehub dev & next dev --turbopack",
+    "build": "basehub && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "basehub": "9.2.3",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
